--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         .card {
             width: 300px;
             height: 400px;
+            color: #000; 
             border: 1px solid #ccc;
             display: flex;
             justify-content: center;
