--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         .card {
             width: 300px;
             height: 400px;
-            color: #000000; 
+            background-color: #000000; 
             border: 10px solid #ccc;
             display: flex;
             justify-content: center;
